--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -3,18 +3,29 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 </head>
 <body>
 <h1>Recipes</h1>
 <p>Below is a list of Mole Recipes</span></p>
 <table>
-<tbody>
-    <tr th:each="recipe: ${recipes}">
-        <td th:text="${recipe.id}" />
-        <td th:text="${recipe.name}" />
-        <td th:text="${recipe.method}" />
-    </tr>
-</tbody>
+	<thead>
+		<tr>
+			<th id="recipeId">ID</th>
+			<th id="recipeName">Name</th>
+			<th id="recipeMethod">Method</th>
+			<th id="recipeIngredients">Ingredients</th>
+		</tr>
+	</thead>
+	<tbody>
+	    <tr th:each="recipe: ${recipes}">
+	        <td th:text="${recipe.id}" />
+	        <td th:text="${recipe.name}" />
+	        <td th:text="${recipe.method}" />
+	        <td th:text="${recipe.ingredients}" />
+	    </tr>
+	</tbody>
 </table>
 <p><a target="_blank" href="saveRecipe">Add another recipe</a></p>
 <p><a target="_blank" href="home">See menu</a></p>
